# weather-service-cpp

./: CMakeLists.txt  LICENSE  vcpkg.json
src/: main.cpp
src/application/: weather_use_case.cpp  weather_use_case.hpp
src/domain/: city.hpp  weather.hpp
src/infrastructure/providers/: i_weather_provider.hpp  mock_provider.cpp  mock_provider.hpp  open_weather_provider.cpp  open_weather_provider.hpp
src/presentation/: http_router.cpp  http_router.hpp  http_server.cpp  http_server.hpp
tests/: dummy_test.cpp  weather_use_case_test.cpp
tests/mocks/: fake_http_client.cpp  fake_http_client.hpp
